Applied auto formatter to all sources