@@ -75,28 +75,37 @@ import de.ovgu.featureide.ui.actions.generator.IConfigurationBuilderBasics.Build
 @SuppressWarnings(RESTRICTION)
 public class TestRunner {
 
-	private static final Object KEY = new Object();
+	private static final Object KEY =
+		new Object();
 	private final TestResults testResults;
-	private static final UIPlugin LOGGER = UIPlugin.getDefault();
-	int compiled = 0;
+	private static final UIPlugin LOGGER =
+		UIPlugin.getDefault();
+	int compiled =
+		0;
 
 	private final IFolder tmp;
 	private final ConfigurationBuilder builder;
 
 	public TestRunner(IFolder tmp, TestResults testResults, final ConfigurationBuilder builder) {
-		this.tmp = tmp;
-		this.testResults = testResults;
-		this.builder = builder;
+		this.tmp =
+			tmp;
+		this.testResults =
+			testResults;
+		this.builder =
+			builder;
 
 	}
 
 	@SuppressWarnings(RESOURCE)
 	public void runTests(final BuilderConfiguration configuration) {
-		URL[] url = getURLs();
-		URLClassLoader classLoader = new URLClassLoader(url, Thread.currentThread().getContextClassLoader());
+		URL[] url =
+			getURLs();
+		URLClassLoader classLoader =
+			new URLClassLoader(url, Thread.currentThread().getContextClassLoader());
 		for (final String file : getFiles(tmp)) {
 			try {
-				Class<?> clazz = classLoader.loadClass(file);
+				Class<?> clazz =
+					classLoader.loadClass(file);
 
 				if (isModuleTest(clazz)) {
 					synchronized (KEY) {
@@ -108,17 +117,20 @@ public class TestRunner {
 					}
 				}
 
-				JUnitCore core = new JUnitCore();
+				JUnitCore core =
+					new JUnitCore();
 				core.addListener(new RunListener() {
 
-					long time = 0;
+					long time =
+						0;
 
 					@Override
 					public void testStarted(Description description) throws Exception {
 						if (description.toString().startsWith("initializationError")) {
 							return;
 						}
-						time = System.currentTimeMillis();
+						time =
+							System.currentTimeMillis();
 					}
 
 					@Override
@@ -126,23 +138,38 @@ public class TestRunner {
 						if (time == -1) {
 							return;
 						}
-						time = System.currentTimeMillis() - time;
+						time =
+							System.currentTimeMillis()
+								- time;
 						testResults.addTest(file,
-								(builder.buildType == BuildType.ALL_CURRENT ? "" : ConfigurationBuilder.FOLDER_NAME + "\\") + configuration.getName(),
+								(builder.buildType == BuildType.ALL_CURRENT
+									? ""
+									: ConfigurationBuilder.FOLDER_NAME
+										+ "\\")
+									+ configuration.getName(),
 								new Test(description.toString(), time, file));
 					}
 
 					@Override
 					public void testFailure(Failure failure) throws Exception {
-						if (failure.getDescription().toString().startsWith("initializationError") || "No runnable methods".equals(failure.getMessage())) {
-							time = -1;
+						if (failure.getDescription().toString().startsWith("initializationError")
+							|| "No runnable methods".equals(failure.getMessage())) {
+							time =
+								-1;
 							return;
 						}
-						time = System.currentTimeMillis() - time;
+						time =
+							System.currentTimeMillis()
+								- time;
 						testResults.addTest(file,
-								(builder.buildType == BuildType.ALL_CURRENT ? "" : ConfigurationBuilder.FOLDER_NAME + "\\") + configuration.getName(),
+								(builder.buildType == BuildType.ALL_CURRENT
+									? ""
+									: ConfigurationBuilder.FOLDER_NAME
+										+ "\\")
+									+ configuration.getName(),
 								new Test(failure.getTestHeader(), time, file, failure));
-						time = -1;
+						time =
+							-1;
 					}
 
 					@Override
@@ -151,7 +178,8 @@ public class TestRunner {
 					}
 
 				});
-				SecurityManager originalManager = System.getSecurityManager();
+				SecurityManager originalManager =
+					System.getSecurityManager();
 				try {
 					System.setSecurityManager(NO_EXIT_MANAGER);
 					core.run(clazz);
@@ -163,30 +191,41 @@ public class TestRunner {
 			}
 		}
 
-		IFeatureProject project = CorePlugin.getFeatureProject(tmp);
+		IFeatureProject project =
+			CorePlugin.getFeatureProject(tmp);
 		if (project != null) {
-			IFile iResultsXML = project.getProject().getFile("test.xml");
+			IFile iResultsXML =
+				project.getProject().getFile("test.xml");
 			saveResults(iResultsXML, testResults);
 		}
 
 	}
 
 	private URL[] getURLs() {
-		ArrayList<URL> urls = new ArrayList<>();
+		ArrayList<URL> urls =
+			new ArrayList<>();
 		try {
-			URL url = tmp.getLocationURI().toURL();
-			url = new URL(url.toString() + "/");
+			URL url =
+				tmp.getLocationURI().toURL();
+			url =
+				new URL(url.toString()
+					+ "/");
 			urls.add(url);
 
-			JavaProject proj = new JavaProject(tmp.getProject(), null);
-			IJavaElement[] elements = proj.getChildren();
+			JavaProject proj =
+				new JavaProject(tmp.getProject(), null);
+			IJavaElement[] elements =
+				proj.getChildren();
 			for (IJavaElement e : elements) {
-				String path = e.getPath().toOSString();
+				String path =
+					e.getPath().toOSString();
 				if (path.contains(":")) {
 					continue;
 				}
-				IResource resource = e.getResource();
-				if (resource != null && "jar".equals(resource.getFileExtension())) {
+				IResource resource =
+					e.getResource();
+				if (resource != null
+					&& "jar".equals(resource.getFileExtension())) {
 					urls.add(resource.getRawLocationURI().toURL());
 				}
 			}
@@ -203,16 +242,18 @@ public class TestRunner {
 	private boolean isModuleTest(Class<?> clazz) {
 		for (Annotation a : clazz.getAnnotations()) {
 			if ("@de.ovgu.featureide.ModuleTest()".equals(a.toString())) {
-				// somehow clazz.getAnnotation(ModulTest.class) does not work 
+				// somehow clazz.getAnnotation(ModulTest.class) does not work
 				return true;
 			}
 		}
 		return false;
 	}
 
-	private static final NoExitSecurityManager NO_EXIT_MANAGER = new NoExitSecurityManager();
+	private static final NoExitSecurityManager NO_EXIT_MANAGER =
+		new NoExitSecurityManager();
 
 	private static class NoExitSecurityManager extends SecurityManager {
+
 		@Override
 		public void checkPermission(Permission perm) {
 			// allow anything.
@@ -232,8 +273,10 @@ public class TestRunner {
 
 	@SuppressWarnings(SERIAL)
 	private static class SystemExitException extends RuntimeException {
+
 		public SystemExitException(int status) {
-			super("Systen.exit: " + status);
+			super("Systen.exit: "
+				+ status);
 		}
 	}
 
@@ -247,15 +290,24 @@ public class TestRunner {
 	}
 
 	private List<String> getFiles(IFolder folder, String prefix) {
-		List<String> files = new LinkedList<>();
+		List<String> files =
+			new LinkedList<>();
 		try {
 
 			for (IResource child : folder.members()) {
 				if (child instanceof IFolder) {
-					files.addAll(getFiles((IFolder) child, (prefix != null ? prefix + "." : "") + child.getName()));
+					files.addAll(getFiles((IFolder) child, (prefix != null
+						? prefix
+							+ "."
+						: "")
+						+ child.getName()));
 				} else if (child instanceof IFile) {
 					if ("class".equals(child.getFileExtension())) {
-						files.add((prefix != null ? prefix + "." : "") + child.getName().substring(0, child.getName().lastIndexOf('.')));
+						files.add((prefix != null
+							? prefix
+								+ "."
+							: "")
+							+ child.getName().substring(0, child.getName().lastIndexOf('.')));
 					}
 				}
 			}
@@ -266,7 +318,8 @@ public class TestRunner {
 	}
 
 	private static synchronized void saveResults(IFile iResultsXML, TestResults testResults) {
-		File resultsXML = new File(iResultsXML.getLocationURI());
+		File resultsXML =
+			new File(iResultsXML.getLocationURI());
 		try {
 			new TestXMLWriter(testResults).writeToFile(resultsXML);
 			iResultsXML.refreshLocal(IResource.DEPTH_INFINITE, null);
@@ -283,28 +336,34 @@ public class TestRunner {
 	 */
 	private static void openJunitView(final IFile file) {
 		if (!file.getFileExtension().equals("xml")) {
-			throw new RuntimeException(file + IS_NO_XML_FILE);
+			throw new RuntimeException(file
+				+ IS_NO_XML_FILE);
 		}
-		final UIJob job = new UIJob(OPEN + file) {
+		final UIJob job =
+			new UIJob(OPEN
+				+ file) {
 
-			@Override
-			public IStatus runInUIThread(IProgressMonitor monitor) {
-				IWorkbenchWindow window = UIPlugin.getDefault().getWorkbench().getWorkbenchWindows()[0];
-				IWorkbenchPage page = window.getActivePage();
-				if (page == null)
-					return Status.OK_STATUS;
+				@Override
+				public IStatus runInUIThread(IProgressMonitor monitor) {
+					IWorkbenchWindow window =
+						UIPlugin.getDefault().getWorkbench().getWorkbenchWindows()[0];
+					IWorkbenchPage page =
+						window.getActivePage();
+					if (page == null)
+						return Status.OK_STATUS;
 
-				try {
-					IEditorDescriptor desc = getDescriptor(file);
-					if (desc != null) {
-						page.openEditor(new FileEditorInput(file), desc.getId());
+					try {
+						IEditorDescriptor desc =
+							getDescriptor(file);
+						if (desc != null) {
+							page.openEditor(new FileEditorInput(file), desc.getId());
+						}
+					} catch (CoreException e) {
+						LOGGER.logError(e);
 					}
-				} catch (CoreException e) {
-					LOGGER.logError(e);
+					return Status.OK_STATUS;
 				}
-				return Status.OK_STATUS;
-			}
-		};
+			};
 		job.schedule();
 		try {
 			job.join();
@@ -314,10 +373,13 @@ public class TestRunner {
 	}
 
 	private static IEditorDescriptor getDescriptor(IFile file) throws CoreException {
-		IContentType contentType = null;
-		IContentDescription description = file.getContentDescription();
+		IContentType contentType =
+			null;
+		IContentDescription description =
+			file.getContentDescription();
 		if (description != null) {
-			contentType = description.getContentType();
+			contentType =
+				description.getContentType();
 		}
 		if (contentType != null) {
 			return PlatformUI.getWorkbench().getEditorRegistry().getDefaultEditor(file.getName(), contentType);
